[tool.poetry]
name = "modelenv"
version = "0.1.0"
description = "enviroemnt for running tensorflow models"
authors = ["andrew"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
absl-py
astunparse
attrs
blinker
cachetools
certifi
cffi
charset-normalizer
chex
command-not-found
contourpy
cryptography
cycler
dbus-python
distro
distro-info
etils
flatbuffers
flax
fonttools
fsspec
gast
google-auth
google-auth-oauthlib
google-pasta
grpcio
h5py
httplib2
idna
importlib-metadata
importlib_resources
jax
jaxlib
jeepney
joblib
keras
keyring
kiwisolver
launchpadlib
lazr.restfulclient
lazr.uri
libclang
Markdown
markdown-it-py
MarkupSafe
matplotlib
mdurl
mediapipe
ml-dtypes
more-itertools
msgpack
namex
nest-asyncio
netifaces
numpy
oauthlib
opencv-contrib-python
opencv-python
opt-einsum
optax
optree
orbax-checkpoint
packaging
pandas
pillow
protobuf
pyasn1
pyasn1_modules
pycparser
Pygments
PyGObject
PyJWT
pyparsing
python-apt
python-dateutil
pytz
PyYAML
requests
requests-oauthlib
rich
rsa
scikit-learn
scipy
SecretStorage
sentencepiece
six
sounddevice
systemd-python
tensorboard
tensorboard-data-server
tensorflow
tensorflow-decision-forests
tensorflow-estimator
tensorflow-hub
tensorflow-io-gcs-filesystem
tensorflowjs
tensorstore
termcolor
tf_keras
threadpoolctl
toolz
typing_extensions
tzdata
ubuntu-pro-client
ufw
unattended-upgrades
urllib3
wadllib
Werkzeug
wrapt
wurlitzer
ydf
zipp

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
